--- a/src/wallet/subpage-ready.html
+++ b/src/wallet/subpage-ready.html
@@ -140,6 +140,14 @@
             return {};
         }
 
+        ready(){
+            if(!this.wallet){
+                window.location.href = "#/wallet"
+                return
+            }
+            super.ready()
+        }
+
         _convertToArray(wallet) {
             var array = new Array();
             array.push(wallet)
