move unlock and generate wallet as a top level page

--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -17,6 +17,10 @@
             background-color: var(--app-primary-color);
         }
 
+        a>paper-button {
+            text-transform: none;
+        }
+
         a[active]>paper-button {
             background-color: var(--app-primary-color-dark);
         }
