--- a/src/page-convert.html
+++ b/src/page-convert.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 <dom-module id="page-convert">
     <template>
-        <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
+        <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
         <style include="shared-styles">
          :host {
             display: block;
