--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -8,8 +8,8 @@
         }
         </style>
         <app-header-layout has-scrolling-region fullbleed>
-            <app-header slot="header" fixed condenses effects="waterfall">
-                <slot name="secondary-toolbar" sticky></slot>
+            <app-header slot="header" fixed  effects="waterfall">
+                <slot name="secondary-toolbar"></slot>
             </app-header>
             <slot></slot>
         </app-header-layout>
