--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -2,7 +2,7 @@
 <!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="simple-toolbar" fit>
     <template>
-        <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
+        <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
         <style include="shared-styles">
          :host {
             display: block;
