--- a/src/my-app.html
+++ b/src/my-app.html
@@ -111,6 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 text-transform: uppercase;
                 /*background-color: #e0e0e0;*/
             }
+            --valo-border-radius: 0px;
             display: block;
         }
 
