--- a/src/page-market.html
+++ b/src/page-market.html
@@ -40,6 +40,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }
         }
 
+
+        .sections>paper-card {
+            margin-bottom: 16px;
+            padding: 0 16px;
+        }
+
+        #charts {
+            padding-bottom: 0;
+            margin-bottom: 32px;
+        }
+
+
         paper-tabs {
             margin-bottom: 8px;
         }
@@ -53,9 +65,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         paper-fab {
-            position: absolute;
-            right: 100px;
+            position: relative;
+            right: -800px;
+            top: 24px;
             background-color: black;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+            0 1px 5px 0 rgba(0, 0, 0, 0.12),
+            0 3px 1px -2px rgba(0, 0, 0, 0.2);
         }
 
         paper-fab[show] {
@@ -74,7 +90,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <global-variable key="wallet" value="{{wallet}}"></global-variable>
             <simple-toolbar slot="secondary-toolbar" title="Market" id="[[marketId()]]" back-link="#/markets"></simple-toolbar>
             <div class="sections">
-                <paper-card>
+                <paper-card id="charts">
                     <div class="vertical layout">
                         <paper-tabs selected="{{chartSelection}}" attr-for-selected="name">
                             <paper-tab name="candle">Candle Chart</paper-tab>
@@ -150,9 +166,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }
         }
         marketId() {
-            if(this.id) return this.id.toUpperCase();
+            if (this.id) return this.id.toUpperCase();
         }
-        _isUnlocked(wallet){
+        _isUnlocked(wallet) {
             console.log(wallet)
             return null != this.wallet
         }
