--- a/src/my-app.html
+++ b/src/my-app.html
@@ -98,8 +98,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
         <style include="shared-styles">
          :host {
-            --app-primary-color: var(--google-blue-500);
-            --app-primary-color-dark: var(--google-blue-700);
+            --app-primary-color: var(--paper-indigo-500);
+            --app-primary-color-dark: var(--paper-indigo-700);
             --app-secondary-color: black;
             --paper-spinner-color: var(--app-primary-color);
             --paper-spinner-stroke-width: 1px;
