--- a/src/page-doc.html
+++ b/src/page-doc.html
@@ -17,12 +17,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         app-toolbar {
-            color: black;
-            background-color: var(--paper-grey-200);
+            color: white;
+            background-color: var(--app-primary-color);
+
         }
 
         paper-icon-button {
-            color: black;
+            color: white;
         }
         </style>
         <looper-page>
